css/styles.css
/* ... */
/**** Form End ****/

/* cocktail & Brews page */
.typo {
  max-width: 85%;
  }

.typo-cen {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 10%;
  margin-top: 10%;
  } 

/* Accordian Tools panels */
.menu {
  display: flex;
  flex-direction: column;
  align-items: center;
  }

.accordionB,
.accordionBLink,
.accordion,
.accordionLink {
  font-family: "HackneyPersonalUseOnly", 
      "Bebas Neue", "Impact", "sans-serif";
  background-color: #08343c;
  border-radius: 5px;
  color: #fff;
  cursor: pointer;
  text-transform: uppercase;
  font-size: 1.2rem;
  letter-spacing: 2px;
  box-shadow: 2px 2px #696969;
  border-width: 1px 1px 2px;
  padding: 8px;
  width: 270px;
  text-align: center;
  border: 1px solid #000;
  outline: none;
  margin-bottom: 1%;
  }

.accordionB:after,
.accordion:after {
  content: "\02795"; /* Unicode character for (+) */
  font-size: 15px;
  color: #fff;
  float: right;
  }

.active:after {
  content: "\2796"; /* Unicode character for (-) */
  }

.active,
.accordion:hover,
.accordionB:hover {
  background-color: #3c0808;
  transition: 0.4s;
  }

.panel {
  padding: 0 20px;
  max-width: 310px;
  background-color: white;
  display: none;
  overflow: hidden;
  }

/* Accordian Recipe panels */
.accordionB,
.accordionBLink {
  background-color:black;
  box-shadow: none;
  margin-top: -6px;
  width: 100%;
  height: 40px;
  }

/* abv calc */
#ABV {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  }

.ABV-Input {
  max-width: 35%;
  }

#calc-ABV-btn {
  display: block;
  border-radius: 5px;
  background-color: #3c0808;
  color: #fff;
  text-transform: uppercase;
  max-height: 50px;
  max-width: 50px;
  margin-top: 10%;
  font-size: 0.7rem;
  }

#randomDrink, 
.btn_typo {
  display: flex;
  flex-direction: column;
  align-items: center;
  }

#randomImg img,
.brewImg {
  display: flex;
  flex: 1 1 auto;
  width: 100%;
  height: auto;
  border-radius: 10px 10px 10px 10px;
  object-fit: cover;
  }

.imgBrew {
  width: 90%;
  object-fit: cover;
  }

.brewImg {
  border-radius: 10px 10px 0 0; 
  margin-top: 5%;
  }

#glossaryDiv li {
  margin-top: 20px;
  text-align: left;
  max-width: 80vw;
  }

/* extract Process Page */
.centerList {
  margin-bottom: 5%;
  }

.equip {
  list-style-type: circle;
  margin-left: 15%;
  margin-bottom: 15%;
  }

.ex-wrap {
  display: flex;
  flex-direction: column;
  }

.box {
  object-fit: cover;
  width: 85%;
  }

.ImageToList {
  display: flex;
  flex-direction: column;
  align-items: center;
  } 

/* click to view list items */
#ex-image {
  padding: 3%;
  cursor: pointer;
  }

.box {
  max-width: 100%;
  }

.centerList {
  position: absolute;
  cursor: pointer;
  margin-top: 3%;
  }

.centerList--hidden {
  display: none;
  }

.contents {
  background-color: #fff;
  border: 1px solid #08343c;
  }

#close {
  padding: 5px;
  cursor: pointer;
  }

/*** product-page ***/
.randomBtn,
#btnPro,
#btnProRem {
  display: inline-block;
  font-family: "HackneyPersonalUseOnly",
       "Bebas Neue", "Impact", "sans-serif";
  text-transform: uppercase;
  font-size: 1.2rem;
  letter-spacing: 2px;
  background-color: #08343c;
  color: #fff;
  box-shadow: 2px 2px #696969;
  width: 75px;
  height: 40px;
  padding: 10px;
  border-radius: 5px;
  border-width: 1px 1px 2px;
  cursor: pointer;
  text-align: center;
  }

#btnPro {
  margin-right: 20px;
  }

#btnProRem {
  background-color: #3c0808;
  }

.btnDiv {
  display: flex;
  flex-direction: row;
  max-width: 280px;
  }

.randomBtn {
  align-self: center;
  width: 222px;
  letter-spacing: 4px;
  }

#btnPro:active,
#btnProRem:active,
.randomBtn:active,
.btn:active {
  background-color: black;
  }

.shopDiv {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: 10%;
  margin-bottom: 15%;
  }

.h1-shop {
  color: #3c0808;
  }

#cart {
  padding: 5px;
  cursor: pointer;
  margin-left: 15%;
  margin-top: -5px;
  }

.productImg {
  margin: 5px;
  object-fit: cover;
  width: 220px;
  height: auto;
  border-radius: 25px;
  border: 1px solid black;
  }

.produ {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  margin-bottom: 30%;
  }

.description {
  padding-left: 10%;
  padding-right: 10%;
  }

.price {
  margin-bottom: 5%;
  }

/* lightbox */
#lightbox {
  position: fixed;
  z-index: 1000;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: #1717176d;
  display: none;
  }

#lightbox.active {
  display: flex;
  justify-content: center;
  align-items: center;
  }

#lightbox img {
  max-width: 100%;  
  max-height: 100%;
  padding: 5px;
  background-color: #171717;
  border-radius: 15px;
  transform: scale(.90);
  }    

.bigFoot {
  flex-shrink: 0;
  }

.social-links {
  display: flex;
  flex-direction: row;
  flex: 1 1 auto;
  justify-content: center;
  }

.icons {
  padding: 8px;
  }

.icons:hover {
  transform: scale(1.2);
  max-width: 70px;
  }

.footerline {
  width: 85%;
  }

.copyright {
  display: flex;
  justify-content: center;
  padding-bottom: 5%;
  }

/*-------------------------------------------------------------
      SMALL iPADS
-------------------------------------------------------------*/
/****** Small Screen Media Queries: Targets VP sizes 540px & wider. *******/
@media (min-width: 540px) {
/* index page */

.p1, .p2 {
  max-width: 80vw;
  }

.flavor {
  width: 115px;
  }
/* extract page  */
.ex-p {
  max-width: 70vw;
  }
/* brew page */
.acc-p {
  max-width: 300px;
  }

.accordion {
  width: 300px;
  }

.imgBrew {
  width: 95%;
  }

.brewStyle {
  text-align: left;
  }

.productImg {
  width: 300px;
  }

.produ {
  width: 340px;
  } 

.description {
  padding-left: 5%;
  padding-right: 5%;
  }
}
/* ... */

